stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Get':
CircularBuffer.c:69:33: error: expected ')' before '{' token
   69 |  if(CircularBuffer_IsEmpty(self)
      |    ~                            ^
      |                                 )
   70 |  {
      |  ~                               
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
